exports[`Navigation Default 1`] = `
<div>
  <h2
    className="title">
    <a
      className=""
      href="/"
      onClick={[Function]}
      style={Object {}}>
      Pigment Store
    </a>
  </h2>
  <li
    className="item">
    <div
      className="search">
      <input
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value="" />
      <button
        onClick={[Function]}>
        <i
          className="material-icons">
          search
        </i>
      </button>
    </div>
  </li>
  <li
    className="item">
    <ul
      className="list">
      <li
        className="item">
        <a
          className=""
          href="/category-Atom"
          onClick={[Function]}
          style={Object {}}>
          <span>
            <span>
              Atom
            </span>
          </span>
        </a>
      </li>
      <li
        className="item">
        <a
          className=""
          href="/category-Molecules"
          onClick={[Function]}
          style={Object {}}>
          <span>
            <span>
              Molecules
            </span>
          </span>
        </a>
      </li>
    </ul>
  </li>
</div>
`;

exports[`Navigation With an active category 1`] = `
<div>
  <h2
    className="title">
    <a
      className=""
      href="/"
      onClick={[Function]}
      style={Object {}}>
      Pigment Store
    </a>
  </h2>
  <li
    className="item">
    <div
      className="search">
      <input
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value="" />
      <button
        onClick={[Function]}>
        <i
          className="material-icons">
          search
        </i>
      </button>
    </div>
  </li>
  <li
    className="item">
    <ul
      className="list">
      <li
        className="item activeItem">
        <a
          className=""
          href="/category-Atom"
          onClick={[Function]}
          style={Object {}}>
          <span>
            <span>
              Atom
            </span>
          </span>
        </a>
        <ul
          className="list">
          <li
            className="item">
            <a
              className=""
              href="/category-Atom/component-Title"
              onClick={[Function]}
              style={Object {}}>
              <span>
                <span>
                  Title
                </span>
              </span>
            </a>
          </li>
          <li
            className="item">
            <a
              className=""
              href="/category-Atom/component-Avatar"
              onClick={[Function]}
              style={Object {}}>
              <span>
                <span>
                  Avatar
                </span>
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        className="item">
        <a
          className=""
          href="/category-Molecules"
          onClick={[Function]}
          style={Object {}}>
          <span>
            <span>
              Molecules
            </span>
          </span>
        </a>
      </li>
    </ul>
  </li>
</div>
`;

exports[`Navigation With an active component 1`] = `
<div>
  <h2
    className="title">
    <a
      className=""
      href="/"
      onClick={[Function]}
      style={Object {}}>
      Pigment Store
    </a>
  </h2>
  <li
    className="item">
    <div
      className="search">
      <input
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value="" />
      <button
        onClick={[Function]}>
        <i
          className="material-icons">
          search
        </i>
      </button>
    </div>
  </li>
  <li
    className="item">
    <ul
      className="list">
      <li
        className="item activeItem">
        <a
          className=""
          href="/category-Atom"
          onClick={[Function]}
          style={Object {}}>
          <span>
            <span>
              Atom
            </span>
          </span>
        </a>
        <ul
          className="list">
          <li
            className="item">
            <a
              className=""
              href="/category-Atom/component-Title"
              onClick={[Function]}
              style={Object {}}>
              <span>
                <span>
                  Title
                </span>
              </span>
            </a>
          </li>
          <li
            className="item activeItem">
            <a
              className=""
              href="/category-Atom/component-Avatar"
              onClick={[Function]}
              style={Object {}}>
              <span>
                <span>
                  Avatar
                </span>
              </span>
            </a>
            <ul
              className="list">
              <li
                className="item fade">
                <span>
                  <span>
                    Default
                  </span>
                </span>
              </li>
              <li
                className="item fade">
                <span>
                  <span>
                    Placeholder
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        className="item">
        <a
          className=""
          href="/category-Molecules"
          onClick={[Function]}
          style={Object {}}>
          <span>
            <span>
              Molecules
            </span>
          </span>
        </a>
      </li>
    </ul>
  </li>
</div>
`;
